# autoproto

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs  newtype.rs  util.rs
examples/: test.rs
src/: generic.rs  lib.rs  macros.rs
tests/: derive.rs
