[package]
name = "autoproto"
version = "0.1.2"
edition = "2018"
description = "Replacement derive macros for `prost::Message`, and supporting traits and types to make implementing this trait easier"
documentation = "https://docs.rs/autoproto"
homepage = "https://github.com/Vurich/autoproto"
repository = "https://github.com/Vurich/autoproto.git"
license = "Unlicense"
readme = "README.md"

[dependencies]
static_assertions = "1.1"
autoproto-derive = { version = "0.1", path = "derive" }
smallvec = { version = "1.6", optional = true }
arrayvec = { version = "0.7", optional = true }
uuid = { version = "0.8", optional = true }
beef = { version = "0.5.1", path = "../beef", optional = true, features = ["std"] }
prost = "0.8"

[features]
default = ["smallvec", "arrayvec", "uuid", "beef"]

[dev-dependencies]
static_assertions = "1.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[workspace]
members = [
    "derive"
]
